--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "puppeteer": "^21.6.0"
+    "puppeteer": "^21.6.0",
+    "user-agents": "^1.1.50"
   }
 }
